--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@heroicons/react": "^2.0.17",
     "@reduxjs/toolkit": "^1.9.3",
+    "@vercel/analytics": "^1.0.1",
     "parcel": "^2.8.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
